# dehancer-gpulib-cpp

./: .gitignore  BUILD-macos.md  BUILD-ubuntu.md  CMakeLists.txt  CMakePresets.json  Readme.md  armadillo.pc.in  dehancer-gpulib-cpp.pc.in  dehancer-maths-cpp.pc.in  version.txt
lib/: CMake.in  CMakeEmbedded.in  CMakeLists.txt  CMakeOverlays.in
lib/cmake/: Config.cmake.in  clHelper.cmake  dehancer_gpulib_cpp.cmake
lib/cuda/: CMakeLists.txt
lib/cuda/cmake/: dehancer_gpulib_cuda.cmake
lib/metal/: CMakeLists.txt
lib/metal/cmake/: dehancer_gpulib_metal.cmake
lib/opencl/: CMakeLists.txt
lib/opencl/cmake/: dehancer_gpulib_opencl.cmake
tests/: CMakeCommon.in  CMakeLists.txt
tests/aobench/: CMakeLists.txt  Readme.md  aobench.h
tests/aobench/cuda/: CMakeLists.txt  main_cuda.cpp
tests/aobench/metal/: CMakeLists.txt  aobench.cpp  aobench.mm  paths_config.h.in
tests/aobench/opencl/: CMakeLists.txt  Image.cpp  Image.h  aobench.cpp  exampleKernel.cl
tests/blur/: CMakeLists.txt  blur.h  blur_test.h
tests/blur/cuda/: CMakeLists.txt  blur_cuda.cpp
tests/blur/opencl/: CMakeLists.txt  blur.cpp  blurKernel.cl  blur_opencl.cpp
tests/cimg/: CMakeLists.txt  cimg.cpp
tests/clut/: CMakeLists.txt
tests/clut/cube_input/: cache.h  load.h
tests/clut/cube_input/cuda/: CMakeLists.txt  main_cuda.cpp
tests/clut/cube_input/metal/: CMakeLists.txt  main_metal.cpp
tests/clut/cube_io/: cache.h  load.h
tests/clut/cube_io/cuda/: CMakeLists.txt  main_cuda.cpp
tests/clut/cube_io/metal/: CMakeLists.txt  main_metal.cpp
tests/clut/cube_io/opencl/: CMakeLists.txt  main_opencll.cpp
tests/clut/identity/: CMakeLists.txt  clut_identity.h
tests/clut/identity/cuda/: CMakeLists.txt  main_cuda.cpp
tests/clut/identity/metal/: CMakeLists.txt  main_metal.cpp
tests/clut/identity/opencl/: CMakeLists.txt  main_opencl.cpp
tests/clut/profiles/: load.h
tests/clut/profiles/cuda/: CMakeLists.txt  main_cuda.cpp
tests/clut/profiles/metal/: CMakeLists.txt  main_metal.cpp
tests/clut/profiles/opencl/: CMakeLists.txt  main_opencl.cpp
tests/clut/space_transform/: space_transform.h
tests/clut/space_transform/cuda/: CMakeLists.txt  main_cuda.cpp
tests/clut/space_transform/metal/: CMakeLists.txt  main_metal.cpp
tests/clut/space_transform/opencl/: CMakeLists.txt  main_opencl.cpp
tests/clut/square_input/: load.h
tests/clut/square_input/cuda/: CMakeLists.txt  main_cuda.cpp
tests/clut/square_input/metal/: CMakeLists.txt  main_metal.cpp
tests/clut/transform/: clut_transform.h
tests/clut/transform/cuda/: CMakeLists.txt  main_cuda.cpp
tests/clut/transform/metal/: CMakeLists.txt  main_metal.cpp
tests/cuda/: CMakeLists.txt
tests/cuda/api/: CMakeLists.txt  main_cuda.cpp
tests/cuda/device/: CMakeLists.txt  main_cuda.cpp
tests/cuda/embedded_fatbin/: CMakeLists.txt  main_cuda.cpp
tests/cuda/half_texture/: CMakeLists.txt  main_cuda.cpp
tests/cuda/texture/: CMakeLists.txt  main_cuda.cpp
tests/data/: 250d_33.cube  clut.clut  mlut.mlut  oversat_33.cube
tests/device/: CMakeLists.txt  device_cache.cpp  device_cache.h
tests/device/cuda/: CMakeLists.txt  device_cache.cpp
tests/device/metal/: CMakeLists.txt  device_cache.mm
tests/device/opencl/: CMakeLists.txt  device_cache.cpp
tests/dotenv/: dotenv.h  dotenv_utils.h
tests/fast_blur/: CMakeLists.txt  fast_blur_test.h
tests/fast_blur/cuda/: CMakeLists.txt  main_cuda.cpp
tests/fast_blur/opencl/: main_opencl.cpp
tests/filter/: filter_test.h
tests/filter/base/: CMakeLists.txt
tests/function/: CMakeLists.txt  function.h
tests/function/cuda/: CMakeLists.txt  main_cuda.cpp
tests/function/metal/: CMakeLists.txt  main_metal.cpp
tests/function/opencl/: CMakeLists.txt  main_opencl.cpp
tests/histogram/: CMakeLists.txt
tests/histogram/analyse/: CMakeLists.txt  function.h
tests/histogram/opencl-histogram/: gpu_histogram.c  gpu_histogram_image.cl
tests/include/: run_images.h  run_test.h  test_config.h.in
tests/memory/: memory_test.h
tests/memory/cuda/: CMakeLists.txt  main_cuda.cpp
tests/memory/metal/: CMakeLists.txt  main_metal.cpp
tests/memory/opencl/: CMakeLists.txt  main_opencl.cpp
tests/operations/: CMakeLists.txt
tests/operations/blend/: function.h
tests/operations/box-and-gauss-blur/: CMakeLists.txt  function.h
tests/operations/convolve/: CMakeLists.txt  convolve_test.h
tests/operations/fast_blur_experimental/: fast_blur_test.h
tests/operations/gamma/: function.h
tests/operations/gaussian_blur/: function.h
tests/operations/morph/: CMakeLists.txt  function.h
tests/operations/optical_resolution/: function.h
tests/operations/resampler/: function.h
tests/overlays/: CMakeLists.txt
tests/overlays/cache/: CMakeLists.txt  main_overlay_cache.cpp
tests/overlays/fc_cache/: CMakeLists.txt
tests/overlays/fc_gradient_cache/: CMakeLists.txt  main_overlay_cache.cpp
tests/overlays/fc_scale_cache/: CMakeLists.txt  main_overlay_cache.cpp
tests/overlays/watermark/: function.h
tests/overlays/wcache/: CMakeLists.txt  main_overlay_cache.cpp
tests/shaders/: CMakeLists.txt  TestKernels.h  aoBench.h  aoBenchKernel.h  test_struct.h
tests/shaders/cuda/: CMakeLists.txt  TestKernels.cu  TestKernels2.cu  paths_config.h.in
tests/shaders/metal/: CMakeLists.txt  TestKernels.metal
tests/shaders/opencl/: CMakeLists.txt  Regestry.cpp  Registry.cpp  TestKernels.cl  main.cpp
tests/texture/: io_texture.h
tests/texture/cuda/: CMakeLists.txt  main_cuda.cpp
tests/texture/metal/: CMakeLists.txt  main_metal.cpp
tests/texture/opencl/: CMakeLists.txt  main_opencl.cpp
tests/video/: Readme.md  io_texture.h
tests/video/cuda/: CMakeLists.txt  main_cuda.cpp
tests/video/metal/: CMakeLists.txt  main_metal.cpp
tests/video/opencl/: CMakeLists.txt  main_opencl.cpp
utils/: CMakeCommon.in  CMakeLists.txt
utils/lut_codegen/: CMakeLists.txt  main.cpp
utils/ocio_codegen/: CMakeLists.txt  main.cpp
utils/shaders/: UtilsKernels.h
utils/shaders/cuda/: CMakeLists.txt
utils/shaders/metal/: CMakeLists.txt  UtilsKernels.metal  paths_config.h.in
utils/shaders/opencl/: CMakeLists.txt  Registry.cpp
(+326 files in other folders)
